// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VirtualizedTableWrapper /> accepts height 1`] = `
<div>
  <div
    class="css-1pgk7dz"
  >
    test
  </div>
</div>
`;

exports[`<VirtualizedTableWrapper /> accepts ref 1`] = `
<div>
  <div
    class="css-eagjw6"
  >
    test
  </div>
</div>
`;

exports[`<VirtualizedTableWrapper /> accepts width 1`] = `
<div>
  <div
    class="css-wmn3kp"
  >
    test
  </div>
</div>
`;

exports[`<VirtualizedTableWrapper /> requires ref 1`] = `
<div>
  <div
    class="css-eagjw6"
  >
    test
  </div>
</div>
`;
